--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
 		"es6": true
 	},
 	"parserOptions": {
-		"ecmaVersion": 2021
+		"ecmaVersion": 202
 	},
 	"rules": {
 		"arrow-spacing": ["warn", { "before": true, "after": true }],
@@ -44,6 +44,7 @@
 		"space-infix-ops": "error",
 		"space-unary-ops": "error",
 		"spaced-comment": "error",
-		"yoda": "error"
-	}
+		"yoda": "error",
+	},
+	"parser": "@babel/eslint-parser"
 }
